no todo: game butterfly hanoy, modem, mdev
---------------------------------- 2023-12-31 08:45:49 23.12.31
no todo: misc natives p4fwd to have more tests 4 packetout message with macsec/wg/ipsec/ovpn/etc too...
qc pass: p4lang: packout on macsec port
qc pass: p4lang: packout on macsec vlan port
---------------------------------- 2024-01-02 12:00:00 24.1.2
qc pass: p4lang: ipsec with packout
qc pass: p4lang: openvpn with packout
qc pass: p4lang: wireguard with packout
qc pass: p4lang: wireguard over vlan with packout
---------------------------------- 2024-01-03 14:33:51 24.1.3
no qc pass: p4lang: wireguard over vlan with packout
qc pass: p4lang: gre with packout
---------------------------------- 2024-01-08 13:21:54 24.1.8
no qc pass: dhcp with excluded address
failed: dhcp with excluded address
---------------------------------- 2024-01-08 14:10:34 24.1.8
no failed: dhcp with excluded address
qc pass: dhcp with excluded address
---------------------------------- 2024-01-09 14:25:46 24.1.9
no todo: image viewer to file manager
---------------------------------- 2024-01-19 07:44:00 24.1.19
qc pass: interop8: ebgp peer role
qc pass: interop8: ebgp ix role
---------------------------------- 2024-01-23 16:15:07 24.1.23
no qc pass: dhcp with excluded address
failed: dhcp with excluded address
---------------------------------- 2024-01-24 06:23:06 24.1.24
no failed: dhcp with excluded address
qc pass: dhcp with excluded address
---------------------------------- 2024-02-15 13:12:20 24.2.15
no qc pass: dhcp with excluded address
failed: dhcp with excluded address
---------------------------------- 2024-02-15 14:00:11 24.2.15
no failed: dhcp with excluded address
qc pass: dhcp with excluded address
---------------------------------- 2024-02-17 12:26:42 24.2.17
no qc pass: dhcp with excluded address
failed: dhcp with excluded address
---------------------------------- 2024-02-17 12:57:04 24.2.17
no failed: dhcp with excluded address
qc pass: dhcp with excluded address