@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.3.11-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-03-11 07:37:19, took 00:11:07, with 60 workers, on 534 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2024-03-11 08:46:48, took 00:10:53, with 60 workers, on 534 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
