@@ -15715,3 +15715,6 @@ failed: dhcp with excluded address
 ---------------------------------- 2024-02-17 12:57:04 24.2.17
 no failed: dhcp with excluded address
 qc pass: dhcp with excluded address
+---------------------------------- 2024-03-11 08:19:49 24.3.11
+no qc pass: dhcp with excluded address
+failed: dhcp with excluded address
